--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,3 +1,4 @@
+@import "./pages";
 * {
   box-sizing: border-box;
 }
@@ -111,41 +112,4 @@ body {
   font-size: 16px;
   line-height: 0;
   width: 320px;
-}
-.imagecontainer {
-  width: 100vw;
-  height: 100vh;
-  overflow: hidden;
-  position: relative;
-}
-.imagecontainer img {
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
-}
-.imagecontainer .pagetitle {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 9rem;
-  opacity: 1;
-}
-.textcontainer {
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  padding: 10rem 20rem;
-}
-.about,
-.services,
-.contact {
-  width: 100vw;
-  overflow: hidden;
-}
-.about .textcontainer > * {
-  margin: 1rem;
 }
