--- a/styles/_pages.scss
+++ b/styles/_pages.scss
@@ -1,3 +1,11 @@
+#viewport {
+  overflow: hidden;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+}
 .imagecontainer {
   width: 100vw;
   height: 100vh;
