--- a/styles/style.css
+++ b/styles/style.css
@@ -77,6 +77,15 @@ body {
   overflow-x: hidden;
 }
 
+#viewport {
+  overflow: hidden;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+}
+
 /* Hide scrollbar for Chrome, Safari and Opera */
 .body::-webkit-scrollbar {
   display: none;
