--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,4 +1,5 @@
 @import "./pages";
+
 * {
   box-sizing: border-box;
 }
@@ -20,7 +21,14 @@ body {
   width: 100vw;
   overflow-x: hidden;
 }
-
+#viewport {
+  overflow: hidden;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+}
 /* Hide scrollbar for Chrome, Safari and Opera */
 .body::-webkit-scrollbar {
   display: none;
