--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,5 +1,10 @@
 @import "./pages";
 
+@mixin mobile {
+  @media (max-width: 776px) {
+    @content;
+  }
+}
 * {
   box-sizing: border-box;
 }
@@ -36,16 +41,23 @@ body {
 
 /* Hide scrollbar for IE, Edge and Firefox */
 
+.text-wrapper {
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .hometitle {
-  position: absolute;
   color: antiquewhite;
   font-size: 5rem;
-  left: 50%;
-  transform: translate(-50%, 0);
+  text-align: center;
 }
 .ml6 {
   font-weight: 900;
   font-size: 3.3em;
+  @include mobile {
+    font-size: 2rem;
+  }
 }
 
 .ml6 .text-wrapper {
@@ -82,6 +94,9 @@ body {
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
+  @include mobile {
+    flex-direction: column;
+  }
 }
 .itemcontainer {
   width: 300px;
