working on css3

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -28,17 +28,36 @@ body {
 }
 #viewport {
   overflow: hidden;
-  position: fixed;
+  position: absolute;
   height: 100%;
   width: 100%;
   top: 0;
   left: 0;
 }
-/* Hide scrollbar for Chrome, Safari and Opera */
-.body::-webkit-scrollbar {
-  display: none;
+.fullscreenwrapper {
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
 }
-
+.fullscreen {
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  border: solid rgb(196, 18, 18) 5px;
+}
+.fullscreen > * {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-height: 100vh;
+  width: 100vw;
+}
 /* Hide scrollbar for IE, Edge and Firefox */
 
 .text-wrapper {
@@ -73,20 +92,7 @@ body {
   display: inline-block;
   line-height: 1em;
 }
-.fullscreen {
-  min-height: 100vh;
-  width: 100vw;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-.fullscreen > * {
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-height: 100vh;
-  width: 100vw;
-}
+
 .container {
   width: 100vw;
   height: 100vh;
