--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 .imagecontainer {
-  width: 100vw;
   height: 100vh;
+  width: 100vw;
   overflow: hidden;
   position: relative;
 }
@@ -22,6 +22,12 @@
   opacity: 1;
 }
 
+@media (max-width: 776px) {
+  .imagecontainer .pagetitle {
+    font-size: 2rem;
+  }
+}
+
 .textcontainer {
   height: 100vh;
   width: 100vw;
@@ -37,7 +43,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 10rem 20rem;
+  padding: 1rem 2rem;
 }
 
 .about,
@@ -79,16 +85,38 @@ body {
 
 #viewport {
   overflow: hidden;
-  position: fixed;
+  position: absolute;
   height: 100%;
   width: 100%;
   top: 0;
   left: 0;
 }
 
-/* Hide scrollbar for Chrome, Safari and Opera */
-.body::-webkit-scrollbar {
-  display: none;
+.fullscreenwrapper {
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+}
+
+.fullscreen {
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  border: solid #c41212 5px;
+}
+
+.fullscreen > * {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-height: 100vh;
+  width: 100vw;
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
@@ -134,22 +162,6 @@ body {
 .ml6 .letter {
   display: inline-block;
   line-height: 1em;
-}
-
-.fullscreen {
-  min-height: 100vh;
-  width: 100vw;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.fullscreen > * {
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-height: 100vh;
-  width: 100vw;
 }
 
 .container {
