--- a/styles/style.css
+++ b/styles/style.css
@@ -57,6 +57,70 @@
   margin: 1rem;
 }
 
+.homelink {
+  width: 100vw;
+  height: 20vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  z-index: 100;
+  mix-blend-mode: difference;
+}
+
+.homelink a {
+  color: white;
+  text-decoration: underline;
+  text-align: center;
+  font-size: 1.8rem;
+}
+
+@media (max-width: 776px) {
+  .homelink a {
+    font-size: 1rem;
+  }
+}
+
+.scrolldown {
+  width: 100vw;
+  height: 20vh;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  z-index: 100;
+  mix-blend-mode: overlay;
+}
+
+.scrolldown h1 {
+  color: white;
+  text-decoration: underline;
+  text-align: center;
+  font-size: 1.8rem;
+}
+
+@media (max-width: 776px) {
+  .scrolldown h1 {
+    font-size: 1rem;
+  }
+}
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
