--- a/styles/style.css
+++ b/styles/style.css
@@ -55,8 +55,9 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   z-index: 100;
 }
 
@@ -201,6 +202,7 @@ body {
 .imagecontainer img {
   width: 100%;
   height: 100%;
+  object-fit: cover;
 }
 
 .imagecontainer .pagetitle {
